# AI20K-mayB

./: .env.example  .gitignore  ARCHITECTURE.md  DISCLOSURE_armbench.md  README.md  RUN_local_ollama.md  RUN_may_B.md  mayB.md  pkill.md
colcon_ws/src/warehouse_nav/: CMakeLists.txt  package.xml
colcon_ws/src/warehouse_nav/config/: forklift_bridge.yaml  gz_server.config  warehouse_demo.rviz
colcon_ws/src/warehouse_nav/launch/: warehouse_sim.launch.py
colcon_ws/src/warehouse_nav/maps/: warehouse_lidar0625.pgm  warehouse_lidar0625.yaml
colcon_ws/src/warehouse_nav/models/sim_pallet/: model.config  model.sdf
colcon_ws/src/warehouse_nav/models/warehouse_forklift/: model.config  model.sdf
colcon_ws/src/warehouse_nav/params/: foxglove_params.yaml  nav2_params.yaml
colcon_ws/src/warehouse_nav/urdf/: warehouse_forklift.urdf
docs/: DEMO_RUNBOOK.md  EVIDENCE.md
eval/: ablation_baseline.py  carry_monitor.py  demo_durability.py  parity_check.py  push_test.py  recovery_check.py  run_e2e_g23r.py  run_eval_aext.py  run_eval_flat2d.py  run_eval_gazebo.py  slam_mapping_drive.py  tasks_aext.json  tasks_m.json  test_pose_accuracy.py  validate_amcl_g26b.py
foxglove/: warehouse_demo.json
pitch/: slide_sim_real.md
plan/: LENH_8_disclosure_review.md  LENH_PHA0_self_contain.md  LENH_PHA1_nav_physics.md  LENH_PHA2_5_amcl_reverse.md  LENH_PHA2_6_slam_rebake.md  LENH_PHA2_TRA_LAI_hoan_tat_e2e.md  LENH_PHA2_pick_drop.md  LENH_PHA4_showcase_evidence_pack.md  PLAN_may_B_gazebo.md  PLAN_may_B_sensors.md  PLAN_may_B_trien_khai_full.md
scripts/: kill_ros.sh  start_demo.sh  (+1 more)
(+84 files in other folders)
