<?xml version="1.0"?>
<package format="3">
  <name>warehouse_nav</name>
  <version>0.1.0</version>
  <description>Launch TB3 AMR + Nav2 in the AWS small warehouse world (Gazebo Harmonic)</description>
  <license>Apache-2.0</license>
  <maintainer email="user@example.com">user</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>aws_robomaker_small_warehouse_world</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_minimal_tb3_sim</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
